snowy-server/snowy-nacos-app/k8s/overlays/test/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snowy-nacos-app
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: nacos
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
